correction overflow #3
test

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -3,8 +3,7 @@
 }
 
 html{
-  overflow-x: hidden;
-  overflow-y: scroll; 
+  overflow-x: scroll; 
 }
 
 a{
